--- a/public/assets/css/demos/demo-22.css
+++ b/public/assets/css/demos/demo-22.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800");
 
-/* model style */
+/* adminPage styles */
 
 .dropdown-content {
   display: none;
